opam-version: "2.0"
maintainer: "G. Allais"
dev-repo: "git+https://github.com/gallais/parseque"
bug-reports: "https://github.com/gallais/parseque/issues"
homepage: "https://github.com/gallais/parseque"
authors: ["G. Allais"]
license: "GPL-3.0"
build: [
  [make "compile"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "coq" {>= "8.9" & < "8.18"}
]

synopsis: "Total parser combinators in Coq"
description: "Port of agdarsec to Coq"
url {
  git: "https://github.com/gallais/parseque.git"
}
